--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,11 @@
 # Ignore pycache
 __pycache__/
 
-# Mac computers suck
-**/.DS_Store
-
 # Pycharm meta-data
 **/.idea/
 
-# Ignore embeddings
-**/pretrained-embeddings/
+# Mac computers
+**/.DS_Store
 
 # Ignore compiled python files
 **/*.pyc
-
-# Ignore trained models
-**/*.hdf5
-
-# Ignore numpy saves
-**/*.npy
